# seqdiagsvg

./: .gitignore  Cargo.toml
seqdiagsvg-ffi/: Cargo.toml  build-xcframework.sh
seqdiagsvg-ffi/SeqDiagRenderer.xcframework/: Info.plist
seqdiagsvg-ffi/SeqDiagRenderer.xcframework/ios-arm64-simulator/Headers/seqdiagsvg_ffiFFI/: module.modulemap
seqdiagsvg-ffi/SeqDiagRenderer.xcframework/macos-arm64_x86_64/Headers/seqdiagsvg_ffiFFI/: seqdiagsvg_ffiFFI.h
seqdiagsvg-ffi/src/: lib.rs
src/: ast.rs  font.rs  grammar.pest  layout.rs  lib.rs  main.rs  parse.rs  png_render.rs  svg_render.rs
tests/: test_integration.rs
tests/visual/: 01_basic_messages.seqdiag  02_participants.seqdiag  03_self_message.seqdiag  04_notes.seqdiag  05_activation.seqdiag  06_activate_deactivate.seqdiag  07_destroy.seqdiag  08_alt_else.seqdiag  09_slanted_arrows.seqdiag  10_auth_flow.seqdiag  11_comments_and_arrow_styles.seqdiag  12_auth_flow_with_conditionals.seqdiag  13_multiple_activations.seqdiag  14_self_deactivation.seqdiag  15_explicit_activation.seqdiag  16_inline_activation_destroy.seqdiag  17_nested_alt_opt_loop.seqdiag  18_wsd_client_full.seqdiag  cache_stampede.seqdiag  cicd_pipeline.seqdiag  db_connection_pool.seqdiag  dns_resolution.seqdiag  email_delivery.seqdiag  git_pull_request.seqdiag  graphql_query.seqdiag  jwt_auth_middleware.seqdiag  oauth2_auth_code.seqdiag  order_saga.seqdiag  render_all.sh  stripe_3ds_payment.seqdiag  tls13_handshake.seqdiag  unicode_japanese.seqdiag  unicode_korean_arabic.seqdiag  unicode_mandarin.seqdiag  websocket_chat.seqdiag
