[package]
name = "seqdiagsvg"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust sequence diagram to SVG/PNG renderer"
license = "Apache-2.0"

[features]
default = ["unicode-fonts"]
unicode-fonts = []

[dependencies]
pest = "2.7"
pest_derive = "2.7"
skrifa = "0.41"
resvg = "0.46"
usvg = "0.46"
thiserror = "2"

[dev-dependencies]
image = "0.25"
